// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select date"
      readonly=""
      size="12"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select month"
      readonly=""
      size="12"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 3`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select week"
      readonly=""
      size="12"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-picker ant-picker-range ant-picker-rtl"
>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      placeholder="Start date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      class="ant-picker-separator"
    >
      →
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="End date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="right:0;width:0;position:absolute"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      aria-label="calendar"
      class="anticon anticon-calendar"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
</div>
`;
